Added modal for confirmation ,fixed DashboardUI

--- a/frontend/src/css/Button.css
+++ b/frontend/src/css/Button.css
@@ -20,6 +20,7 @@
 
 .btn-primary:hover:not(:disabled) {
   background-color: #3cdb18;
+  color: black;
 }
 
 /* ---------- SECONDARY action button---------- */
@@ -30,14 +31,15 @@
 
 .btn-secondary:hover:not(:disabled) {
   background-color: #f44336;
+  color: white;
 }
 
 /* ---------- destructive action button ---------- */
 .btn-danger {
-  background-color: #e53935;
+  background-color: #760705;
   color: white;
 }
 
 .btn-danger:hover:not(:disabled) {
-  background-color: #c62828;
+  background-color: #f50c0c;
 }
