--- a/frontend/src/css/UserProfile.css
+++ b/frontend/src/css/UserProfile.css
@@ -2,7 +2,7 @@
   max-width: 600px;
   margin: 7px auto;
   padding: 18px;
-  background: #aed4d8;
+  background: #abcace;
   border-radius: 12px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
 }
